--- a/src/client/app/login/login.html
+++ b/src/client/app/login/login.html
@@ -1,12 +1,31 @@
-<section id="dashboard-view" class="mainbar" data-ng-controller="login as vm">
+<section id="dashboard-view" class="mainbar" data-ng-controller="login as vm" data-ng-if="!user.isAuthenticated" >
     <section class="matter">
         <div class="container">
-            <span ng-show="vm.isAuthenticated">{{vm.welcome}}</span>
-            <form ng-show="!vm.isAuthenticated" ng-submit="vm.submit()">
-                <input ng-model="vm.user.username" type="text" name="user" placeholder="Associate Id" />
-                <input type="submit" value="Login" />
-            </form>
-            <div>{{vm.error}}</div>            
+            <div class="row">
+                <div class="col-md-4 col-md-offset-2">
+                    <div class="login-panel panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Please Sign In</h3>
+                        </div>
+                        <div class="panel-body">
+                            <form role="form" ng-submit="vm.submit()">
+                                <fieldset>
+                                    <div class="form-group">
+                                        <input ng-model="vm.user.username" class="form-control" type="text" name="user" placeholder="Associate Id" />
+                                    </div>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input name="remember" type="checkbox" value="Remember Me">Remember Me
+                                        </label>
+                                    </div>
+                                    <!-- Change this to a button or input when using this as a form -->
+                                    <button type="submit" class="btn btn-lg btn-primary btn-block">Login</a>
+                                </fieldset>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </section>
