--- a/src/client/index.html
+++ b/src/client/index.html
@@ -67,6 +67,8 @@
     <script src="/app/layout/shell.js"></script>
     <script src="/app/layout/sidebar.js"></script>
     <script src="/app/login/login.js"></script>
+    <script src="/app/report/report.js"></script>
+    <script src="/app/TimeEntry/timeEntry.js"></script>
 
     <!-- app Services -->
     <script src="/app/services/authInterceptor.js"></script>
