--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-﻿<section id="dashboard-view" class="mainbar" data-ng-controller="dashboard as vm">
+﻿<section id="dashboard-view" class="mainbar">
     <section class="matter">
         <div class="container">
             <div class="row">
@@ -15,7 +15,7 @@
                         <li class="bblue">
                             <div class="pull-left avenger-logo"></div>
                             <div class="datas-text pull-right">
-                                <span class="bold">{{vm.avengerCount}}</span> Cast
+                                <span class="bold">{{dashboardCtrl.avengerCount}}</span> Cast
                             </div>
                             <div class="clearfix"></div>
                         </li>
@@ -37,7 +37,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr data-ng-repeat="a in vm.avengers">
+                                    <tr data-ng-repeat="a in dashboardCtrl.avengers">
                                         <td>{{a.name}}</td>
                                         <td>{{a.character}}</td>
                                     </tr>
@@ -51,10 +51,10 @@
                 </div>
                 <div class="col-md-6">
                     <div class="widget wlightblue">
-                        <div data-cc-widget-header title="{{vm.news.title}}"
+                        <div data-cc-widget-header title="{{dashboardCtrl.news.title}}"
                              allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
-                            <small>{{vm.news.description}}</small>
+                            <small>{{dashboardCtrl.news.description}}</small>
                         </div>
                         <div class="widget-foot">
                             <div class="clearfix"></div>
