--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
 
     <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/bower_components/angular-ui-bootstrap-bower/ui-bootstrap-csp.css" rel="stylesheet" />
     <link href="/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="/bower_components/toastr/toastr.css" rel="stylesheet" />
     <link href="/content/customtheme.css" rel="stylesheet">
@@ -45,6 +46,7 @@
     <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="/bower_components/toastr/toastr.js"></script>
     <script src="/bower_components/moment/moment.js"></script>
+    <script src="/bower_components/angular-ui-bootstrap-bower/ui-bootstrap.min.js"></script>
     <script src="/bower_components/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js"></script>
     <script src="/bower_components/spin.js/spin.js"></script>
 
