Dev completed for authentication service

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -69,12 +69,14 @@
     <script src="/app/layout/shell.js"></script>
     <script src="/app/layout/sidebar.js"></script>
     <script src="/app/login/login.js"></script>
+    <script src="/app/login/logout.js"></script>
     <script src="/app/report/report.js"></script>
     <script src="/app/TimeEntry/timeEntry.js"></script>
 
     <!-- app Services -->
     <script src="/app/services/authInterceptor.js"></script>
     <script src="/app/services/datacontext.js"></script>
+    <script src="/app/services/memberService.js"></script>
     <script src="/app/services/directives.js"></script>
 </body>
 </html>
