--- a/src/client/app/TimeEntry/timeEntry.html
+++ b/src/client/app/TimeEntry/timeEntry.html
@@ -6,7 +6,7 @@
 					<label for="week-of-year" class="col-2 col-form-label">Pick the Week</label>
 					<div class="col-10">
  							<p class="input-group">
-          						<input type="text" class="form-control" uib-datepicker-popup ng-model="timeEntryCtrl.weekOfYear" is-open="timeEntryCtrl.calender.opened"  datepicker-options="timeEntryCtrl.dateOptions" close-text="Close" />
+          						<input type="text" class="form-control" uib-datepicker-popup ng-model="timeEntryCtrl.weekOfYear" is-open="timeEntryCtrl.calender.opened"  datepicker-options="timeEntryCtrl.dateOptions" close-text="Close" ng-click="timeEntryCtrl.calender.opened = true" required/>
           						<span class="input-group-btn" ng-click="timeEntryCtrl.openCalender()">
             						<button type="button" class="btn btn-default" ><i class="glyphicon glyphicon-calendar"></i></button>
           						</span>
@@ -34,7 +34,7 @@
 				<div class="form-group row">
 					<label for="reason-diff" class="col-2 col-form-label">Reason for Difference</label>
 					<div class="col-10">
-					    <textarea class="form-control" ng-model="timeEntryCtrl.reasonDiff"  placeholder="Enter reason for difference" id="reason-diff" ng-required="timeEntryCtrl.allocatedHrs > timeEntryCtrl.actualHrs"></textarea>
+					    <textarea class="form-control" ng-model="timeEntryCtrl.reasonDiff"  placeholder="Enter reason for difference" id="reason-diff" ng-required="timeEntryCtrl.allocatedHrs !== timeEntryCtrl.actualHrs"></textarea>
 					</div>
 				</div>
 				<div class="form-group row">
