--- a/src/client/app/TimeEntry/timeEntry.html
+++ b/src/client/app/TimeEntry/timeEntry.html
@@ -3,10 +3,10 @@
 		<div class="container">
 			<form role="form" ng-submit="timeEntryCtrl.submit()">
 				<div class="form-group row">
-					<label for="week-of-year" class="col-2 col-form-label">Pick the Week</label>
-					<div class="col-10">
+					<label for="week-of-year" class="col-xs-12 col-form-label">Pick the Week</label>
+					<div class="col-xs-9 col-lg-6">
  							<p class="input-group">
-          						<input type="text" class="form-control" uib-datepicker-popup ng-model="timeEntryCtrl.weekOfYear" is-open="timeEntryCtrl.calender.opened"  datepicker-options="timeEntryCtrl.dateOptions" close-text="Close" ng-click="timeEntryCtrl.calender.opened = true" required/>
+          						<input type="text" id="week-of-year" class="form-control" uib-datepicker-popup ng-model="timeEntryCtrl.weekOfYear" is-open="timeEntryCtrl.calender.opened"  datepicker-options="timeEntryCtrl.dateOptions" close-text="Close" ng-click="timeEntryCtrl.calender.opened = true" ng-change="timeEntryCtrl.select()" readonly='true' required/>
           						<span class="input-group-btn" ng-click="timeEntryCtrl.openCalender()">
             						<button type="button" class="btn btn-default" ><i class="glyphicon glyphicon-calendar"></i></button>
           						</span>
@@ -14,31 +14,31 @@
  					</div>
 				</div>
 				<div class="form-group row">
-					<label for="project-ID" class="col-2 col-form-label">Project Id</label>
-					<div class="col-10">
+					<label for="project-ID" class="col-xs-12 col-form-label">Project Id</label>
+					<div class="col-xs-12 col-lg-6">
 					   <input class="form-control" type="text" ng-model="timeEntryCtrl.projectId" id="project-ID" disabled>
 					</div>
 				</div>
 				<div class="form-group row">
-					  <label for="allocated-hr" class="col-2 col-form-label">Allocated Hours</label>
-					<div class="col-10">
+					  <label for="allocated-hr" class="col-xs-12 col-form-label">Allocated Hours</label>
+					<div class="col-xs-12 col-lg-6">
 					   <input class="form-control" type="number" ng-model="timeEntryCtrl.allocatedHrs" placeholder="Enter Allocated Hours" id="allocated-hr" required>
 					</div>
 				</div>
 				<div class="form-group row">
-					<label for="actual-hr" class="col-2 col-form-label">Actual Hours</label>
-					<div class="col-10">
+					<label for="actual-hr" class="col-xs-12 col-form-label">Actual Hours</label>
+					<div class="col-xs-12 col-lg-6">
 					    <input class="form-control" type="number" ng-model="timeEntryCtrl.actualHrs" placeholder="Enter Actual Hours" id="actual-hr" required>
 					</div>
 				</div>
 				<div class="form-group row">
-					<label for="reason-diff" class="col-2 col-form-label">Reason for Difference</label>
-					<div class="col-10">
+					<label for="reason-diff" class="col-xs-12 col-form-label">Reason for Difference</label>
+					<div class="col-xs-12 col-lg-6">
 					    <textarea class="form-control" ng-model="timeEntryCtrl.reasonDiff"  placeholder="Enter reason for difference" id="reason-diff" ng-required="timeEntryCtrl.allocatedHrs !== timeEntryCtrl.actualHrs"></textarea>
 					</div>
 				</div>
 				<div class="form-group row">
-					<button type="submit" class="btn btn-lg btn-primary mar-l0">Submit</button>					
+					<button type="submit" class="btn btn-lg btn-primary mar-l15">Submit</button>					
 				</div>
 			<form>
 		</div>
