--- a/src/client/app/report/report.html
+++ b/src/client/app/report/report.html
@@ -3,8 +3,8 @@
 		<div class="container">
 			<form role="form">
 				<div class="form-group row">
-					<label for="week-of-year" class="col-2 col-form-label">Pick Starting Week</label>
-					<div class="col-10">
+					<label for="week-of-year" class="col-xs-12 col-form-label">Pick Starting Week</label>
+					<div class="col-xs-12 col-lg-6">
  							<p class="input-group">
           						<input type="text" class="form-control" uib-datepicker-popup ng-model="reportCtrl.startWeek" is-open="reportCtrl.calender1.opened"  datepicker-options="reportCtrl.dateOptions" close-text="Close" ng-click="reportCtrl.calender1.opened = true" required/>
           						<span class="input-group-btn" ng-click="reportCtrl.openCalender1()">
@@ -14,8 +14,8 @@
  					</div>
 				</div>
 				<div class="form-group row">
-					<label for="week-of-year" class="col-2 col-form-label">Pick ending Week</label>
-					<div class="col-10">
+					<label for="week-of-year" class="col-xs-12 col-form-label">Pick ending Week</label>
+					<div class="col-xs-12 col-lg-6">
  							<p class="input-group">
           						<input type="text" class="form-control" uib-datepicker-popup ng-model="reportCtrl.endWeek" is-open="reportCtrl.calender2.opened"  datepicker-options="reportCtrl.dateOptions" close-text="Close" ng-click="reportCtrl.calender2.opened = true" required/>
           						<span class="input-group-btn" ng-click="reportCtrl.openCalender2()">
@@ -25,8 +25,8 @@
  					</div>
 				</div>
 				<div class="form-group row">
-					<label for="project-ID" class="col-2 col-form-label">Project Id</label>
-					<div class="col-10">
+					<label for="project-ID" class="col-xs-12 col-form-label">Project Id</label>
+					<div class="col-xs-12 col-lg-6">
 					   <select class="form-control" ng-model="reportCtrl.projectId" id="project-ID">
 					   		<option value="">All Projects</option>
 					   		<option ng-repeat="project in reportCtrl.projectList">{{project}}</option>
@@ -34,7 +34,7 @@
 					</div>
 				</div>
 				<div class="form-group row">
-					<button type="submit" class="btn btn-lg btn-primary mar-l0" ng-click="reportCtrl.submit()">Show</button>					
+					<button type="submit" class="btn btn-lg btn-primary mar-l15" ng-click="reportCtrl.submit()">Show</button>					
 				</div>
 			<form>
 
