Fetching project details on load

--- a/src/client/app/login/login.html
+++ b/src/client/app/login/login.html
@@ -11,13 +11,13 @@
                             <form role="form" ng-submit="loginCtrl.submit()">
                                 <fieldset>
                                     <div class="form-group">
-                                        <input ng-model="loginCtrl.user.username" class="form-control" type="text" name="user" placeholder="Associate Id" />
+                                        <input ng-model="loginCtrl.user.username" class="form-control" type="text" name="user" placeholder="Associate Id" required />
                                     </div>
-                                    <div class="checkbox">
+                                    <!-- <div class="checkbox">
                                         <label>
                                             <input name="remember" type="checkbox" value="Remember Me">Remember Me
                                         </label>
-                                    </div>
+                                    </div> -->
                                     <!-- Change this to a button or input when using this as a form -->
                                     <button type="submit" class="btn btn-lg btn-primary btn-block">Login</button>
                                 </fieldset>
