Report generation functionality

--- a/src/client/app/report/report.html
+++ b/src/client/app/report/report.html
@@ -57,6 +57,7 @@
 	            				<td>{{emp.project}}</td>
 	            				<td>{{emp.allocated}}</td>
 	            				<td>{{emp.actual}}</td>
+	            				<td>{{emp.Comments}}</td>
 	            			</tr>
 	            		</tbody>
 					</table>
