Refactoring the code

--- a/src/client/app/report/report.html
+++ b/src/client/app/report/report.html
@@ -55,9 +55,11 @@
 	            				<td>{{emp.empId}}</td>
 	            				<td>{{emp.name}}</td>
 	            				<td>{{emp.project}}</td>
+	            				<td>{{emp.WeekStartDate}}</td>
 	            				<td>{{emp.allocated}}</td>
 	            				<td>{{emp.actual}}</td>
 	            				<td>{{emp.Comments}}</td>
+	            				<td>{{emp.hrsDiff}}</td>
 	            			</tr>
 	            		</tbody>
 					</table>
