--- a/src/client/index.html
+++ b/src/client/index.html
@@ -78,5 +78,7 @@
     <script src="/app/services/datacontext.js"></script>
     <script src="/app/services/memberService.js"></script>
     <script src="/app/services/directives.js"></script>
+    <script src="/app/services/clarityOperationService.js"></script>
+
 </body>
 </html>
