--- a/src/client/app/TimeEntry/timeEntry.html
+++ b/src/client/app/TimeEntry/timeEntry.html
@@ -14,7 +14,7 @@
  					</div>
 				</div>
 				<div class="form-group row">
-					<label for="project-ID" class="col-xs-12 col-form-label">Project Id</label>
+					<label for="project-ID" class="col-xs-12 col-form-label">Project Name</label>
 					<div class="col-xs-12 col-lg-6">
 					   <input class="form-control" type="text" ng-model="timeEntryCtrl.projectId" id="project-ID" disabled>
 					</div>
