--- a/src/client/app/TimeEntry/timeEntry.html
+++ b/src/client/app/TimeEntry/timeEntry.html
@@ -1,7 +1,7 @@
 <section class="mainbar">
 	<section class="matter">
 		<div class="container">
-			<form role="form" ng-submit="timeEntryCtrl.submit()">
+			<form role="form" no-validate ng-submit="timeEntryCtrl.submit()">
 				<div class="form-group row">
 					<label for="week-of-year" class="col-xs-12 col-form-label">Pick the Week</label>
 					<div class="col-xs-9 col-lg-6">
