--- a/src/client/app/report/report.html
+++ b/src/client/app/report/report.html
@@ -1,7 +1,7 @@
 <section class="mainbar">
 	<section class="matter">
 		<div class="container">
-			<form role="form">
+			<form role="form" no-validate id="dataFetchForm">
 				<div class="form-group row">
 					<label for="week-of-year" class="col-xs-12 col-form-label">Pick Starting Week</label>
 					<div class="col-xs-12 col-lg-6">
