--- a/src/client/index.html
+++ b/src/client/index.html
@@ -13,12 +13,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
 
-    <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/bower_components/angular-ui-bootstrap-bower/ui-bootstrap-csp.css" rel="stylesheet" />
-    <link href="/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="/bower_components/toastr/toastr.css" rel="stylesheet" />
-    <link href="/content/customtheme.css" rel="stylesheet">
-    <link href="/content/styles.css" rel="stylesheet" />
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="bower_components/angular-ui-bootstrap-bower/ui-bootstrap-csp.css" rel="stylesheet" />
+    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="bower_components/toastr/toastr.css" rel="stylesheet" />
+    <link href="content/customtheme.css" rel="stylesheet">
+    <link href="content/styles.css" rel="stylesheet" />
 </head>
 <body>
     <div>
@@ -38,47 +38,47 @@
     <!-- <span data-cc-scroll-to-top></span> -->
 
     <!-- Vendor Scripts -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angular-animate/angular-animate.js"></script>
-    <script src="/bower_components/angular-route/angular-route.js"></script>
-    <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="/bower_components/toastr/toastr.js"></script>
-    <script src="/bower_components/moment/moment.js"></script>
-    <script src="/bower_components/angular-ui-bootstrap-bower/ui-bootstrap.min.js"></script>
-    <script src="/bower_components/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js"></script>
-    <script src="/bower_components/spin.js/spin.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/toastr/toastr.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-ui-bootstrap-bower/ui-bootstrap.min.js"></script>
+    <script src="bower_components/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js"></script>
+    <script src="bower_components/spin.js/spin.js"></script>
 
     <!-- Bootstrapping -->
-    <script src="/app/app.js"></script>
-    <script src="/app/config.js"></script>
-    <script src="/app/config.route.js"></script>
+    <script src="app/app.js"></script>
+    <script src="app/config.js"></script>
+    <script src="app/config.route.js"></script>
 
     <!-- common Modules -->
-    <script src="/app/common/common.js"></script>
-    <script src="/app/common/logger.js"></script>
-    <script src="/app/common/spinner.js"></script>
-    <script src="/app/common/exceptionHandler.js"></script>
+    <script src="app/common/common.js"></script>
+    <script src="app/common/logger.js"></script>
+    <script src="app/common/spinner.js"></script>
+    <script src="app/common/exceptionHandler.js"></script>
 
     <!-- common.bootstrap Modules -->
-    <script src="/app/common/bootstrap/bootstrap.dialog.js"></script>
+    <script src="app/common/bootstrap/bootstrap.dialog.js"></script>
 
     <!-- app -->
-    <script src="/app/dashboard/dashboard.js"></script>
-    <script src="/app/layout/shell.js"></script>
-    <script src="/app/layout/sidebar.js"></script>
-    <script src="/app/login/login.js"></script>
-    <script src="/app/login/logout.js"></script>
-    <script src="/app/report/report.js"></script>
-    <script src="/app/TimeEntry/timeEntry.js"></script>
+    <script src="app/dashboard/dashboard.js"></script>
+    <script src="app/layout/shell.js"></script>
+    <script src="app/layout/sidebar.js"></script>
+    <script src="app/login/login.js"></script>
+    <script src="app/login/logout.js"></script>
+    <script src="app/report/report.js"></script>
+    <script src="app/TimeEntry/timeEntry.js"></script>
 
     <!-- app Services -->
-    <script src="/app/services/authInterceptor.js"></script>
-    <script src="/app/services/datacontext.js"></script>
-    <script src="/app/services/memberService.js"></script>
-    <script src="/app/services/directives.js"></script>
-    <script src="/app/services/clarityOperationService.js"></script>
+    <script src="app/services/authInterceptor.js"></script>
+    <script src="app/services/datacontext.js"></script>
+    <script src="app/services/memberService.js"></script>
+    <script src="app/services/directives.js"></script>
+    <script src="app/services/clarityOperationService.js"></script>
 
 </body>
 </html>
